--- a/config.yaml
+++ b/config.yaml
@@ -270,6 +270,10 @@ Standards:
         Path: /lists-and-memory/lists-as-references.md
       -
         Type: Lesson
+        UID: 5395b235-30dc-47a8-a077-ac5cf578971c
+        Path: /lists-and-memory/lists-and-big-o.md
+      -
+        Type: Lesson
         UID: 36a61d83-b47f-414f-a6f0-3bd4331e713f
         Path: /lists-and-memory/lists-and-memory-problem-set.md
   -
