--- a/config.yaml
+++ b/config.yaml
@@ -148,7 +148,7 @@ Standards:
         Path: /intro-to-functions/problem-set-intro-to-functions.md
   -
     Title: Functions, Continued
-    Description: "Variable Scope, How to Read Documentation, Problem Set: Functions Continued"
+    Description: "Variable Scope, How to Read Documentation, Variables Are References, Problem Set: Functions Continued"
     UID: 6736abef6aad93ad0fdb8d10e1849b62
     SuccessCriteria:
       - success criteria
@@ -161,6 +161,10 @@ Standards:
         Type: Lesson
         UID: 0ea7bd4c9be9469bd0232744edf2a80d
         Path: /functions-continued/how-to-read-documentation.md
+      -
+        Type: Lesson
+        UID: MlpE4r
+        Path: /functions-continued/variables-are-references.md
       -
         Type: Lesson
         UID: POpDU4
