--- a/config.yaml
+++ b/config.yaml
@@ -268,6 +268,10 @@ Standards:
         Type: Lesson
         UID: 3302a20d
         Path: /while-loops/problem-set-while-loops.md
+      -
+        Type: Instructor
+        UID: c8eef724
+        Path: /while-loops/problem-set-while-loops.instructor.md
   -
     Title: Exception Handling
     Description: "Raising and Handling Exceptions, Checking Exceptions in Tests, Problem Set: Exception Handling"
