--- a/config.yaml
+++ b/config.yaml
@@ -524,7 +524,7 @@ Standards:
         Path: /python-oop/problem-set-static-methods-and-class-methods.md
   -
     Title: Unit 1 Wrap-up
-    Description: "Reflection Activity"
+    Description: "Activity: Mind Map"
     UID: 05dcb8c7-8bfb-4b27-acef-9e1c838579d1
     SuccessCriteria:
       - success criteria
