--- a/config.yaml
+++ b/config.yaml
@@ -454,6 +454,10 @@ Standards:
         Type: Lesson
         UID: ecf610c94fd56dbcc8dcfa0f774342ec
         Path: /intro-to-object-oriented-programming/problem-set-constructors.md
+      -
+        Type: Lesson
+        UID: ecf610c94fd56dbcc8dcfa0f774342ec
+        Path: /intro-to-object-oriented-programming/problem-set-intro-to-oop.md
   -
     Title: Intro To OOP, Cont'd
     Description: "Testing Objects, Projects With Many Files"
